seccion 1 terminada, seccion 3 falta iconos

--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
-/* ===========================================================
- ______     __  __     __  __        __     __   __     ______    
-/\  __ \   /\ \_\ \   /\ \/\ \      /\ \   /\ "-.\ \   /\  ___\   
-\ \  __ \  \ \____ \  \ \ \_\ \     \ \ \  \ \ \-.  \  \ \ \____  
- \ \_\ \_\  \/\_____\  \ \_____\     \ \_\  \ \_\\"\_\  \ \_____\ 
-  \/_/\/_/   \/_____/   \/_____/      \/_/   \/_/ \/_/   \/_____/ 
-================================================================== */  
-  
   <!--[if IE 8]> <html class="no-js lt-ie9" lang="en" > <![endif]-->
   <!--[if gt IE 8]><!--> <html class="no-js" lang="es" > <!--<![endif]-->
-  <head>
+  <head> <!-- comienza el header -->
+
     <!--[if lt IE 9]>
     <script src="{site_url}/js/ie9/html5shiv.js"></script>
     <script src="{site_url}/js/ie9/nwmatcher-1.2.5-min.js"></script>
@@ -56,11 +49,55 @@
     <link rel="apple-touch-icon" sizes="128x128" href="">
     <link rel="apple-touch-icon" sizes="76x76" href="">
     <link rel="apple-touch-icon" href="">
-
     <!-- WebFonts -->
 
 
     <!-- APP STYLES -->
     <link rel="stylesheet" href="stylesheets/main.css">
     <!-- <link rel="stylesheet" href="stylesheets/main.min.css"> -->
-  </head>
+  </head>  <!-- fin del header -->
+  <body> 
+    <!-- SECCIÓN 1 -->
+    <section id="seccion_1"> 
+      <div class="container-fluid">
+        <div class="row"> <!-- empieza barra de navegación-->
+          <div class="col-md-4"></div>
+          <div class="col-md-3"> </div>
+          <div class="col-md-5">
+            <ul class="list-unstyled clearfix text-muted">
+              <li>
+                <a href="#" class="button" id="ingresar">INGRESAR</a>
+              </li>
+              <li class="pt-35">
+                <a href="#">VACANTES</a>
+              </li>
+              <li class="pt-35">
+                <a href="#">UNIVERSIDADES</a>
+              </li>
+              <li class="pt-35">
+                <a href="#">EMPRESAS</a>
+              </li>
+            </ul>
+          </div>
+        </div><!--  fin de barra de navegación -->
+        <div class="row">
+          <div class="col-md-6 text-center mt-42">
+            <img src="assets/img/logo-03.png">
+            <h3 class="text-muted"><strong>Propuesta de valor <br>
+            (texto farolito en dos líneas)</strong></h3>
+            <h3 id="mensaje">Mensaje que extienda la propuesta de valor y que 
+            motive al usuario a crear un perfil.</h3>
+            <div class="mt-21">
+              <a href="login.html" class="btn-sm btn mt-21"><strong>CREA TU PERFIL</strong>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-6"></div>
+        </div>
+      </div>
+    </section> <!-- FIN DE LA SECCION 1 --> 
+  </body>
+</html>
+
+
+
