seccion_1, seccion_3 y seccion_4 funcionan en desktop, necesita mejoras en movil.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,101 @@
           <div class="col-md-6"></div>
         </div>
       </div>
-    </section> <!-- FIN DE LA SECCION 1 --> 
+    </section> <!-- FIN DE LA SECCION 1 -->
+     <!--  EMPIEZA SECCION 3 -->
+    <section id="seccion_3">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="title text-center">
+            <h3>FAROLITO PARA EMPRESAS</h3>
+          </div>  
+        </div>
+        <div class="row">
+          <div class="text-right pt-35 col-md-2">
+            <img src="assets/img/icono_foco.png">
+          </div>
+          <div class="col-md-4 p-0">
+            <div><h3>CONTRATA AL MEJOR TALENTO</h3></div>
+            <div><p class="m-0">Queremos ser el proveedor estratégico que ayuda 
+            a las empresas a bajar a rotación y subir la 
+            productividad de sus trabajadores a través del 
+            análisis y evaluación.</p></div>
+          </div>
+          <div class="col-md-6"></div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 text-right">
+            <ul class="list-unstyled">
+             <li class="p-42 relative">EVALUACIÓN DE POSTULANTES<img src="assets/img/icono_check-06.png" class="icon absolute"></li>
+             <li class="p-42 relative">CONVOCATORIAS COMPLETAS<img src="assets/img/icono_personas-07.png" class="icon absolute"></li>
+             <li class="p-42 relative">DIAGNÓSTICO DE LA ROTACIÓN<img src="assets/img/icono_personas_unidas-08.png" class="icon absolute"></li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <ul class="list-unstyled">
+              <li class="relative p-42">
+                En colaboración con empresas que contratan a puestos masivos, identificamos al perfil idóneo para el puesto indicado, y evaluamos a todos los postulantes.
+              </li>
+              <li class="p-42">Desde el armar el perfil hasta la penúltima entrevista, 
+              aseguramos que elijas a los mejores profesionales para 
+              tu empresa.</li>
+              <li class="p-42">
+                Analizamos los datos que maneja tu empresa en el 
+                último año y la rotación de cada uno de los 
+                trabajadores. Vemos patrones de rotación, proceso de 
+                inserción, proponemos maneras fáciles para bajar la 
+                rotación y asegurar que tus trabajadores salgan 
+                adelante en el trabajo.
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="row text-center">
+          <a href="#" class="btn-sm btn"><strong><h4 class="m-0">EMPEZAR AHORA</h4></strong></a>
+        </div>
+      </div>
+    </section> <!-- FIN DE LA SECCION 3 --> 
+  <!--  EMPIEZA SECCION 4 -->
+    <section id="seccion_4">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="title text-center">
+            <h3>FAROLITO PARA EMPRESAS</h3>
+          </div>  
+        </div>
+        <div class="row">
+          <div class="text-right pt-35 col-md-2">
+            <img src="assets/img/iconos_universidades-09.png">
+          </div>
+          <div class="col-md-4 p-0">
+            <div><h3>CONTRATA AL MEJOR TALENTO</h3></div>
+            <div><p class="m-0">Queremos ser el proveedor estratégico que apoya a los centros educativos en asegurar que estén egresando los mejores profesionales que requiere el mercado laboral.</p></div>
+          </div>
+          <div class="col-md-6"></div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 text-right">
+            <ul class="list-unstyled">
+             <li class="p-42 relative">ANÁLISIS DE ALUMNOS<img src="assets/img/iconos_universidades-10.png" class="icon absolute"></li>
+             <li class="p-42 relative">FILTRO DE POSTULACIÓN<img src="assets/img/iconos_universidades-11.png" class="icon absolute"></li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <ul class="list-unstyled">
+              <li class="p-42">
+                Ofrecemos el Examen Farolito en centros educativos para evaluar a un grupo de alumnos definido por el centro.
+              </li>
+              <li class="p-42">
+                El Examen Farolito se ha incorporado como parte del filtro de postulación en centros educativos para identificar a los postulantes que cuentan con las competencias importantes para asumir el curso o la carrera y a los que tienen las preferencias (perfil profesional) para disfrutar y salir adelante en su carrera elegido.
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="row text-center">
+          <a href="#" class="btn-sm btn"><strong><h4 class="m-0">EMPEZAR AHORA</h4></strong></a>
+        </div>
+      </div>
+    </section> <!-- FIN DE LA SECCION 3 --> 
   </body>
 </html>
 
