seccion5 necesita fuente alterntiva y color celeste.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     <link rel="apple-touch-icon" sizes="76x76" href="">
     <link rel="apple-touch-icon" href="">
     <!-- WebFonts -->
-
+    <script src="//use.typekit.net/hyh3zkn.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
 
     <!-- APP STYLES -->
     <link rel="stylesheet" href="stylesheets/main.css">
@@ -96,6 +97,99 @@
         </div>
       </div>
     </section> <!-- FIN DE LA SECCION 1 --> 
+    <!-- inicio section 2 -->
+    <section id="seccion_2"> 
+      <div class="container-fluid">
+       <div class="row">
+          <div class="col-sm-12 text-center">
+               <h3 class="title_demuestra_tus_habilidades"><strong>DEMUESTRA TUS HABILIDADES</strong></h3>
+          </div>
+       </div>
+       <div class="row">
+          <div class="col-md-4 text-center">
+            <ul class="list-unstyled">
+              <li><h4><strong>1</strong></h4></li>
+              <li><img src="assets/img/icono_lapiz.png"></li>
+              <li><h4>CREA TU PERFIL</h4></li>
+              <li><h6>Lorem ipsum dolor sit amet, consectetuer 
+                    adipiscing elit, sed diam nonummy nibh 
+                    euismod tincidunt ut laoreet dolore magna</h6></li>
+            </ul>
+          </div>
+          <div class="col-md-4 text-center">
+            <ul class="list-unstyled">
+              <li><h2><strong>2</strong></h2></li>
+              <li><img src="assets/img/icono_check.png"></li>
+              <li><h4>MIRA LAS OFERTAS LABORALES</h4></li>
+              <li><p>LLorem ipsum dolor sit amet, consectetuer 
+                  adipiscing elit, sed diam nonummy nibh 
+                  euismod tincidunt ut laoreet dolore magna</p></li>
+            </ul>
+          </div>
+          <div class="col-md-4 text-center">
+            <ul class="list-unstyled">
+              <li><h2><strong>3</strong></h2></li>
+              <li><img src="assets/img/icono_globos.png"></li>
+              <li><h4>RECIBE COACHING</h4></li>
+              <li><p>Lorem ipsum dolor sit amet, consectetuer 
+                adipiscing elit, sed diam nonummy nibh 
+                euismod tincidunt ut laoreet dolore magna.</p></li>
+            </ul>
+          </div>       
+       </div>
+      </div>
+    </section>
+    <!-- find section 2 -->
+
+    <!-- inicio de la seccion 5 -->
+    <section id="seccion_5"> 
+      <div class="container-fluid">
+        <div class="row pt-70">
+          <div class="col-sm-2"></div>
+          <div class="col-sm-8 hoja">
+            <h2 class="text-center"><strong>Lista de vacantes</strong></h2>
+            <div class="row pb-28 pt-28">
+                <h4><a href="#"><strong>Asesor de servicio</strong></a></h4>
+                <h5><strong>Descripción:</strong></h5>
+                <p>Nos encontramos en la búsqueda de Asesores de Servicio para vender 
+                entradas de eventos Artísticos y Culturales en la ciudad de Lima. </p>
+                <h5><strong>Localidad:</strong></h5>
+                <p>Lima</p>
+                <a href="#" class="button pull-right" id="ingresar"><strong>APLICAR</strong></a>
+            </div>
+            <div class="row pb-28 pt-28">
+                <h4><a href="#"><strong>Practicante de estadistica</strong></a></h4>
+                <h5><strong>Descripción:</strong></h5>
+                <p>Nos encontramos en la búsqueda de Asesores de Servicio para vender 
+                entradas de eventos Artísticos y Culturales en la ciudad de Lima. </p>
+                <h5><strong>Localidad:</strong></h5>
+                <p>Lima</p>
+                <ul class="list-unstyled">
+                  <li>
+                    <a href="#" class="button pull-right" id="ingresar"><strong>APLICAR</strong></a>
+                  </li>
+                </ul>
+            </div>
+            <div class="row pb-28 pt-28">
+              <h4><a href="#"><strong>Supervisor de seguridad</strong></a></h4>
+              <h5><strong>Descripción:</strong></h5>
+              <p>Nos encontramos en la búsqueda de Asesores de Servicio para vender 
+              entradas de eventos Artísticos y Culturales en la ciudad de Lima. </p>
+              <h5><strong>Localidad:</strong></h5>
+              <p>Lima</p>
+              <ul class="list-unstyled">
+                <li>
+                  <a href="#" class="button pull-right" id="ingresar"><strong>APLICAR</strong></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-sm-2"></div>
+        </div>
+      </div>
+
+    </section>
+    <!--fin section 5-->
   </body>
 </html>
 
