secciones de bea terminadas

--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
        <div class="row">
           <div class="col-md-4 text-center">
             <ul class="list-unstyled">
-              <li><h4><strong>1</strong></h4></li>
+              <li><h2><strong>1</strong></h2></li>
               <li><img src="assets/img/icono_lapiz.png"></li>
               <li><h4>CREA TU PERFIL</h4></li>
-              <li><h6>Lorem ipsum dolor sit amet, consectetuer 
+              <li><p>Lorem ipsum dolor sit amet, consectetuer 
                     adipiscing elit, sed diam nonummy nibh 
-                    euismod tincidunt ut laoreet dolore magna</h6></li>
+                    euismod tincidunt ut laoreet dolore magna</p></li>
             </ul>
           </div>
           <div class="col-md-4 text-center">
@@ -147,8 +147,8 @@
         <div class="row pt-70">
           <div class="col-sm-2"></div>
           <div class="col-sm-8 hoja">
-            <h2 class="text-center"><strong>Lista de vacantes</strong></h2>
-            <div class="row pb-28 pt-28">
+            <div class="clearfix pb-28 pt-28">
+              <h2 class="text-center"><strong>Lista de vacantes</strong></h2>
                 <h4><a href="#"><strong>Asesor de servicio</strong></a></h4>
                 <h5><strong>Descripción:</strong></h5>
                 <p>Nos encontramos en la búsqueda de Asesores de Servicio para vender 
@@ -157,7 +157,8 @@
                 <p>Lima</p>
                 <a href="#" class="button pull-right" id="ingresar"><strong>APLICAR</strong></a>
             </div>
-            <div class="row pb-28 pt-28">
+
+            <div class="clearfix pb-28 pt-28">
                 <h4><a href="#"><strong>Practicante de estadistica</strong></a></h4>
                 <h5><strong>Descripción:</strong></h5>
                 <p>Nos encontramos en la búsqueda de Asesores de Servicio para vender 
@@ -170,7 +171,8 @@
                   </li>
                 </ul>
             </div>
-            <div class="row pb-28 pt-28">
+
+            <div class="clearfix pb-28 pt-28">
               <h4><a href="#"><strong>Supervisor de seguridad</strong></a></h4>
               <h5><strong>Descripción:</strong></h5>
               <p>Nos encontramos en la búsqueda de Asesores de Servicio para vender 
@@ -183,13 +185,56 @@
                 </li>
               </ul>
             </div>
+            <a class="bt"href="#" class="button" id="ingresar"><h6>VER TODOS</h6></a>
           </div>
           <div class="col-sm-2"></div>
         </div>
       </div>
-
     </section>
     <!--fin section 5-->
+    <!--inicio seccion 6-->
+    <section id="seccion_6"> 
+      <div class="container-fluid">
+        <div class="row pt-">
+          <div class="col-sm-4 col-xs-4"></div>
+          <div class="col-sm-4 col-xs-4 pt-70">
+              <h6><strong>¿TIENES ALGUNA CONSULTA?</strong></h6>
+              <form role="form">
+                <div class="form-group">
+                  <label for="exampleInputEmail1"></label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Nombre">
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputPassword1"></label>
+                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Correo">
+                </div>
+                <textarea class="form-control" rows="3" placeholder="Escribe tu mensaje aqui"></textarea>
+                <button type="submit" class="btn btn-default"><strong>ENVIAR</strong></button>
+              </form>
+              <p>
+                <h5>o Llámanos al +51 32660564</h5>
+              </p>
+          </div>
+          <div class="col-sm-4 col-xs-4"></div>
+    </section>
+    <!--fin section 6-->
+    <!--inicio section footer-->
+    <section id="footer">
+      <div class="row">
+      </div>
+      <div class="row-1">
+        <div class="col-sm-4 col-xs-4">
+          <a href="#"><img src="assets/img/face_icon.png"></a>
+          <a href="#"><img src="assets/img/twiter_icon.png"></a>
+          <a href="#"><img src="assets/img/gmail_icon.png"></a>
+        </div>
+        <div class="col-sm-2 col-xs-2"></div>
+        <div class="col-sm-6 col-xs-6">
+          <p class="derechos">todos los derechos reservados</p>
+        </div>
+      </div>
+    </section>
+    <!--fin section footer-->
   </body>
 </html>
 
